--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Document</title>
     </head>
     <body>
-        <div id="inputs">
+        <div id="choises-content">
             <input type="text" name="choises[]" />
         </div>
 
@@ -15,14 +15,28 @@
 
         <script type="text/javascript">
             const addInput = document.getElementById("add-input");
-            const inputs = document.getElementById("inputs");
+            const inputs = document.getElementById("choises-content");
 
             addInput.addEventListener("click", () => {
                 const newElement = document.createElement("input");
                 newElement.name = "choises[]";
+                newElement.classList.add("form-control");
+                newElement.classList.add("mt-3");
                 newElement.type = "text";
-                newElement.classList.add()
-                inputs.appendChild(newElement);
+
+                const button = document.createElement("button");
+                button.textContent = "Hapus";
+                button.addEventListener("click", () => {
+                    newElement.remove();
+                    button.remove();
+                });
+
+                const containerInput = document.createElement("div");
+                containerInput.classList.add("container-input");
+
+                containerInput.appendChild(button);
+                containerInput.appendChild(newElement);
+                inputs.appendChild(containerInput);
             });
         </script>
     </body>
